# opencv_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  basic_image_handling  makeTravis.mk
src/: main.cpp  makefile
src/toolbox/: basic_image_handling.cpp  toolbox.h
src/travis/: helloTravis.cpp
test/: CMakeLists.txt  makeTest.mk  makefile
